# speech-to-text

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: manual-test-plan.md
docs/superpowers/plans/: 2026-04-29-speech-to-text.md
docs/superpowers/specs/: 2026-04-29-speech-to-text-design.md
scripts/: generate_sounds.sh
src/speech_to_text/: __main__.py  audio.py  cli.py  config.py  daemon.py  hotkeys.py  launchd.py  notifications.py  paste.py  sounds.py  transcribe.py
tests/: test_audio.py  test_cli.py  test_config.py  test_daemon.py  test_hotkeys.py  test_launchd.py  test_notifications.py  test_paste.py  test_smoke.py  test_sounds.py  test_transcribe.py
tests/fixtures/: expected.plist  generate.sh
